--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pushkeen-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://futbnj.github.io/pushkeen-tt",
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.3",
@@ -13,12 +14,9 @@
     "@types/react-dom": "^17.0.14",
     "classnames": "^2.3.1",
     "css-loader": "^6.7.1",
-    "gsap": "^3.10.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -27,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.8"
+    "gh-pages": "^3.2.3"
   }
 }
